# mqtop

./: .gitignore  README.md  config.example.toml  pyproject.toml
src/mqtop/: __init__.py  cli.py  config.py  errors.py  k8s.py  messages.py  monitor.py  tui.py
tests/: __init__.py  test_config.py
